# PlanToolPathOnSurface

./: LICENSE  README.md
data/: curvenoise.pcd  curvenoise.stl  curvenoise_inliers.pcd  curvenoise_outliers.pcd  curvenoisefilter.pcd  plane.pcd  plane.stl  planenoise.pcd  planenoise.stl  planenoisefilter.pcd  planenoisefilter.stl  result.ply
pathplan/: CMakeLists.txt  package.xml  pathplan.py  pathplaning.py
pathplan/scripts/: cloud_pub.py  ngc_writer.py  normalcal.py  parallel_finish_zig.py  pathplan.py  pathplaning.py  select.py  test.py  waterline_simple.py  zigzag.py
readstl/: CMakeLists.txt  package.xml
readstl/scripts/: drawarrow.py  pathplan copy.py  pathplan.py  readpcd.py  single.py
readstl/src/: calnormal.cpp  denoiseUniformSampling.cpp  denoisecurve.cpp  denoiseplane.cpp  denoiseremove.cpp  pcdtoplyashape.cpp  pcdtoplypoison.cpp  plytostl.cpp  readpcd.cpp  stltopcd.cpp
